--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<script src="js/deps/jquery.js"></script>
 	<script src="js/canvas256.js"></script>
-	<script src="js/pentagram.js"></script>
+	<script src="js/intro.js"></script>
 
 </body>
 </html>
