--- a/index.html
+++ b/index.html
@@ -1,42 +1,34 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>8bitdemos by 8bitdemos</title>
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>8bitdemos</h1>
+        <p></p>
 
-  <title>8bitdemos</title>
-  <meta name="description" content="">
+        <p class="view"><a href="https://github.com/8bitdemos/demos">View the Project on GitHub <small>8bitdemos/demos</small></a></p>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">8bitdemos</h1>
-    </header>
-    <div id="container">
-      <p class="tagline"></p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/8bitdemos/demos/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/8bitdemos/demos/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/8bitdemos/demos" class="code">View 8bitdemos on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
+        <ul>
+          <li><a href="https://github.com/8bitdemos/demos/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/8bitdemos/demos/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/8bitdemos/demos">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h3>
 <a name="a-collection-of-early-90s-style-demos-written-in-javascript" class="anchor" href="#a-collection-of-early-90s-style-demos-written-in-javascript"><span class="octicon octicon-link"></span></a>A collection of early '90s-style demos, written in JavaScript</h3>
 
 <p>To simulate <a href="http://en.wikipedia.org/wiki/Mode_13h">Mode 13h</a>, a small (and as of yet, highly unoptimized) lib called <a href="https://github.com/8bitdemos/demos/blob/gh-pages/js/canvas256.js">Canvas256</a> is used.</p>
@@ -51,26 +43,13 @@
 <li>Internet Explorer 11</li>
 <li>Google Chrome 32</li>
 </ul><p>Currently (and to the best of my knowledge), only FF and Safari support nearest-neighbor interpolation. IE and Chrome instead use bilinear interpolation, which doesn't look as crisp.</p>
-        </article>
-      </div>
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/8bitdemos">8bitdemos</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/8bitdemos" class="avatar"><img src="https://1.gravatar.com/avatar/9c8f06c2232a3a54fcdeb553db7d4673?d=https%3A%2F%2Fidenticons.github.com%2F3e250d3b5a7b4f7339172c440db318d5.png&amp;r=x&amp;s=60" width="48" height="48"/></a> <a href="https://github.com/8bitdemos">8bitdemos</a> maintains <a href="https://github.com/8bitdemos/demos">8bitdemos</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/8bitdemos/demos/tarball/master" class="tar">tar</a><a href="https://github.com/8bitdemos/demos/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
 </html>
