add demo thumbnails

--- a/index.html
+++ b/index.html
@@ -38,6 +38,27 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
+        <table>
+        	<tbody>
+        		<tr>
+        			<td><img src="images/demo-thumbs/intro.png"></td>
+        			<td><img src="images/demo-thumbs/basicfire.png"></td>
+        		</tr>
+        		<tr>
+        			<td><strong>Intro / splash screen</strong></td>
+        			<td><strong>Old school fire</strong></td>
+        		</tr>
+        		<tr>
+        			<td><img src="images/demo-thumbs/pentagram.png"></td>
+        			<td><img src="images/demo-thumbs/wave.png"></td>
+        		</tr>
+        		<tr>
+        			<td><strong>Pentagrams and other pointy things</strong></td>
+        			<td><strong>Sine and cosine waves</strong></td>
+        		</tr>
+        	</tbody>
+        </table>
+
         <p>To simulate <a href="http://en.wikipedia.org/wiki/Mode_13h"><strong>Mode 13h</strong></a>, a small (and as of yet, highly unoptimized) lib called <a href="https://github.com/8bitdemos/demos/blob/gh-pages/js/canvas256.js"><strong>Canvas256</strong></a> is used.</p>
 
 <p><strong>Canvas256</strong> provides a <strong>320x180</strong> (16:9) HTML5 canvas, which can be manipulated in <strong>256-color palette mode</strong> (palette effects such as old school fire are doable).</p>
