separate page for each demo

--- a/basicfire.html
+++ b/basicfire.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 
-	<title>8bitdemos</title>
+	<title>8bitdemos - Old school fire</title>
 
 	<link rel="stylesheet" type="text/css" href="css/base.css">
 
@@ -13,7 +13,7 @@
 
 	<script src="js/deps/jquery.js"></script>
 	<script src="js/canvas256.js"></script>
-	<script src="js/intro.js"></script>
+	<script src="js/basicfire.js"></script>
 
 </body>
 </html>
