--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
         <table>
         	<tbody>
         		<tr>
-        			<td><img src="images/demo-thumbs/intro.png"></td>
-        			<td><img src="images/demo-thumbs/basicfire.png"></td>
+        			<td><a href="intro.html"><img src="images/demo-thumbs/intro.png"></a></td>
+        			<td><a href="basicfire.html"><img src="images/demo-thumbs/basicfire.png"></a></td>
         		</tr>
         		<tr>
-        			<td><strong>Intro / splash screen</strong></td>
-        			<td><strong>Old school fire</strong></td>
+        			<td><a href="intro.html"><strong>Intro / splash screen</strong></a></td>
+        			<td><a href="basicfire.html"><strong>Old school fire</strong></a></td>
         		</tr>
         		<tr>
-        			<td><img src="images/demo-thumbs/pentagram.png"></td>
-        			<td><img src="images/demo-thumbs/wave.png"></td>
+        			<td><a href="pentagram.html"><img src="images/demo-thumbs/pentagram.png"></a></td>
+        			<td><a href="wave.html"><img src="images/demo-thumbs/wave.png"></a></td>
         		</tr>
         		<tr>
-        			<td><strong>Pentagrams and other pointy things</strong></td>
-        			<td><strong>Sine and cosine waves</strong></td>
+        			<td><a href="pentagram.html"><strong>Pentagrams and other pointy things</strong></a></td>
+        			<td><a href="wave.html"><strong>Sine and cosine waves</strong></a></td>
         		</tr>
         	</tbody>
         </table>
