--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
+        <h3><strong>View them in your browser:</strong></h3>
+
         <table>
         	<tbody>
         		<tr>
@@ -58,6 +60,14 @@
         		</tr>
         	</tbody>
         </table>
+
+        <h3><strong>Or on YouTube:</strong></h3>
+
+        <iframe width="640" height="360" src="//www.youtube.com/embed/JjJYQrv809c?rel=0" frameborder="0" allowfullscreen></iframe>
+
+        <br/><br/>
+
+        <h3><strong>Implementation</strong></h3>
 
         <p>To simulate <a href="http://en.wikipedia.org/wiki/Mode_13h"><strong>Mode 13h</strong></a>, a small (and as of yet, highly unoptimized) lib called <a href="https://github.com/8bitdemos/demos/blob/gh-pages/js/canvas256.js"><strong>Canvas256</strong></a> is used.</p>
 
